--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,7 @@
 /* # By Roah on Github https://github.com/rnr-roah */
 @define-color background #08080B;
-@define-color background-alt alpha(@background, .4);
+@define-color background-alt alpha(@background, .6);
+@define-color background-alt2 alpha(@background, .3);
 @define-color text #ffffff;
 @define-color text-alt #ffffff;
 @define-color selected alpha(@text-alt, .4);
@@ -12,7 +13,7 @@
   font-size: 14px;
   font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
   min-height: 10px;
-  transition: 100ms;
+  transition: 60ms;
 }
 * {
     font-family: "Symbols Nerd Font Mono", "Symbols Nerd Font", "Nerd Font Complete", "Nerd Font", monospace;
@@ -38,11 +39,23 @@ window#waybar {
   padding-right: 10px;
 
 }
+#custom-spacer1{
+  background-color: @background-alt;
+  font-size: 12px;
+  opacity: 1;
+  color: #c0caf5;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-top: 0px;
+  padding-left: 10px;
+  padding-right: 5px;
+
+}
 #backlight{
   border-radius: 0px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  margin-right: -10px;
+ /* border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;*/
+  margin-right: -5px;
 }
 #pulseaudio {
   border-radius: 0px;
@@ -66,7 +79,7 @@ window#waybar {
   border-radius: 0px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  margin-right: 15px;
+  margin-right: 0px;
 }
 /**/
 
@@ -115,18 +128,20 @@ window#waybar {
 
 
 #custom-power_mode{
-  border-radius: 10px;
-  background-color: transparent;
+  border-radius: 0px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background-color: @background;
   color: #c0caf5;
   margin-top: 5px;
   margin-bottom: 5px;
-  opacity: 1;
-  margin-right: 10px;
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  font-size: 16px;
   margin-left: 10px;
+  margin-right: 0px;
+  opacity: 0.75;
+  padding-top: 1px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 16px;
 }
 #custom-window-name {
   /*color: #91e0ee;*/
@@ -149,17 +164,21 @@ window#waybar {
 }
 #workspaces button {
   background: transparent;
-  color: grey;
+  color: white;
+  opacity: 0.4;
   border-radius: 100px;
 }
 
 #workspaces button.active {
-  color: #c0caf5;
+  /*color: #c0caf5;*/
+	color:white;
+	opacity:0.6;
+	background: @background-alt2;
 }
 
- #custom-playerctl{
+#custom-playerctl{
   border-radius: 10px;
-  background-color: @background;
+  background-color: @background-alt;
   opacity: 0.75;
   color: #c0caf5;
   margin-top: 5px;
